[project]
name = "lllm"
version = "0.1.0"
description = "Super unique um little large language model that does shakespeare stuff and folds arms epicly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.11.12",
    "jax>=0.5.2",
    "jaxlib>=0.5.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "torch>=2.6.0",
]
